--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -77,6 +77,7 @@
 			<DCCReference Include="Project87\Project87.Game.pas"/>
 			<DCCReference Include="QGame\QGame.Resources.pas"/>
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.TestScene.pas"/>
+			<DCCReference Include="Project87\Scenes\Project87.Scenes.Game.pas"/>
 			<DCCReference Include="QApplication\QApplication.Input.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
