Stable version. Added global resources class and hero object.

--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -80,6 +80,8 @@
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.Game.pas"/>
 			<DCCReference Include="QApplication\QApplication.Input.pas"/>
 			<DCCReference Include="Project87\Project87.GameObject.pas"/>
+			<DCCReference Include="Project87\Objects\Project87.Hero.pas"/>
+			<DCCReference Include="Project87\Project87.Resources.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
