--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -79,7 +79,7 @@
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.TestScene.pas"/>
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.Game.pas"/>
 			<DCCReference Include="QApplication\QApplication.Input.pas"/>
-			<DCCReference Include="Project87\Project87.GameObject.pas"/>
+			<DCCReference Include="Project87\Types\Project87.Types.GameObject.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.Hero.pas"/>
 			<DCCReference Include="Project87\Project87.Resources.pas"/>
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.IntroScene.pas"/>
