--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -55,6 +55,7 @@
 			</DelphiCompile>
 			<DCCReference Include="uMain.pas"/>
 			<DCCReference Include="Strope\Strope.Math.pas"/>
+			<DCCReference Include="Strope\Strope.Utils.pas"/>
 			<DCCReference Include="QGame\QGame.Game.pas"/>
 			<DCCReference Include="QGame\QGame.ResourceManager.pas"/>
 			<DCCReference Include="QGame\QGame.SceneManager.pas"/>
@@ -84,6 +85,7 @@
 			<DCCReference Include="Project87\Project87.Resources.pas"/>
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.IntroScene.pas"/>
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.MainMenuScene.pas"/>
+			<DCCReference Include="Project87\Objects\Project87.Asteroid.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
