New scene images

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ release/bin/log.txt
 /source/Project_87.dpr.bak
 /source/Project_87.dproj.local
 /source/Project_87.identcache
+/source/Project_87.dsk
+/source/Project_87.res
