--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ release/bin/log.txt
 /source/Project_87.identcache
 /source/Project_87.dsk
 /source/Project_87.res
+/release/data/gfx/logo_elements/igdc.png
+/release/data/gfx/logo_elements/exp/bg-g0000.png
+/release/data/gfx/logo_elements/exp/bg-mov-g.png
+/release/data/gfx/logo_elements/exp/cog1-g00.png
+/release/data/gfx/logo_elements/exp/cog2-g00.png
