--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ release/bin/log.txt
 /release/data/gfx/logo_elements/exp/bg-mov-g.png
 /release/data/gfx/logo_elements/exp/cog1-g00.png
 /release/data/gfx/logo_elements/exp/cog2-g00.png
+/release/data/gfx/logo_elements/gear_giant.png
