Begin work with star systems map.

--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -87,6 +87,7 @@
 			<DCCReference Include="uMain.pas"/>
 			<DCCReference Include="Strope\Strope.Utils.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.Fluid.pas"/>
+			<DCCReference Include="Project87\Types\Project87.Types.StarMap.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
