--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -87,9 +87,10 @@
 			<DCCReference Include="uMain.pas"/>
 			<DCCReference Include="Strope\Strope.Utils.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.Fluid.pas"/>
-			<DCCReference Include="Project87.BaseEnemy.pas"/>
+			<DCCReference Include="Project87\Objects\Project87.BaseEnemy.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.Bullet.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.Weapon.pas"/>
+			<DCCReference Include="Project87.BaseUnit.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
