--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -90,7 +90,7 @@
 			<DCCReference Include="Project87\Objects\Project87.BaseEnemy.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.Bullet.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.Weapon.pas"/>
-			<DCCReference Include="Project87.BaseUnit.pas"/>
+			<DCCReference Include="Project87\Objects\Project87.BaseUnit.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
