--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -91,6 +91,7 @@
 			<DCCReference Include="Project87\Objects\Project87.Bullet.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.Weapon.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.BaseUnit.pas"/>
+			<DCCReference Include="Project87\Scenes\Project87.Scenes.StarMapScene.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.StarMap.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
