--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -93,6 +93,7 @@
 			<DCCReference Include="Project87\Objects\Project87.BaseUnit.pas"/>
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.StarMapScene.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.StarMap.pas"/>
+			<DCCReference Include="Project87\Types\Project87.Types.SimpleGUI.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
