Added resource system

--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -93,6 +93,7 @@
 			<DCCReference Include="Project87\Objects\Project87.BaseUnit.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.BigEnemy.pas"/>
 			<DCCReference Include="Project87\Objects\Project87.SmallEnemy.pas"/>
+			<DCCReference Include="Project87\Objects\Project87.ScannerWave.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
