--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ release/bin/log.txt
 /release/data/gfx/logo_elements/exp/cog1-g00.png
 /release/data/gfx/logo_elements/exp/cog2-g00.png
 /release/data/gfx/logo_elements/gear_giant.png
+/release/data/gfx/logo_elements/gear_giant.png
