star system generator protptype

--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -97,6 +97,7 @@
 			<DCCReference Include="Project87\Scenes\Project87.Scenes.StarMapScene.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.StarMap.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.SimpleGUI.pas"/>
+			<DCCReference Include="Project87\Types\Project87.Types.SystemGenerator.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
