Stable version. Added resource counting. Added Fluids auto get.

--- a/source/Project_87.dproj
+++ b/source/Project_87.dproj
@@ -99,6 +99,7 @@
 			<DCCReference Include="Project87\Types\Project87.Types.SimpleGUI.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.SystemGenerator.pas"/>
 			<DCCReference Include="Project87\Types\Project87.Types.StarFon.pas"/>
+			<DCCReference Include="Project87\Types\Project87.Types.HeroInterface.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
