--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ release/bin/log.txt
 /release/data/gfx/logo_elements/exp/cog2-g00.png
 /release/data/gfx/logo_elements/gear_giant.png
 /release/data/gfx/logo_elements/gear_giant.png
+/release/data/map/starmap - копия.map
+/release/data/map/starmap - копия.map
